# apexai

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml  walkthrough.md
.github/workflows/: pages.yml
data/: Sonoma Intermediate - 1_47.5.vbo  VBOX0133.vbo  VBOX0134.vbo  VBOX0162.vbo  VBOX0202.vbo
docs/: app.js  index.html  styles.css
src/apexai/: __init__.py
src/apexai/server/: __init__.py  __main__.py  api.py  broadcaster.py  config.py  main.py  replay_engine.py  schemas.py  telemetry_sources.py  vbo_parser.py
src/apexai/ui/: __init__.py  main.py
src/apexai/ui/static/: 404.html  index.html  index.txt
src/apexai/ui/static/_next/static/chunks/: 401-e6ad9cc94ac09cb4.js  478-fe97fedf98032f8c.js  main-app-01efebe2d96e717c.js
src/apexai/ui/static/_next/static/chunks/app/: layout-77d72165c88fad74.js  page-09f71bb11edd8b1c.js
src/apexai/ui/static/_next/static/css/: 6d45c63e977f1fca.css
ui/: next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx  store.ts
ui/scripts/: copy-static.mjs
